# roxlu_experimental

./: .gitattributes  .gitignore  README.md  readme.txt
addons/Audio/: CMakeLists.txt  README.md
addons/Audio/include/audio/: Audio.h  AudioFile.h  AudioListener.h  AudioOutput.h  AudioPlayer.h  AudioStream.h  MP3Writer.h  PCMWriter.h
addons/Audio/src/audio/: Audio.cpp  AudioFile.cpp  AudioOutput.cpp  AudioPlayer.cpp  AudioStream.cpp  MP3Writer.cpp  PCMWriter.cpp
addons/Buttons/: Button.cpp  Button.h  Buttons.cpp  Buttons.h  CMakeLists.txt  Element.cpp  Element.h  README.md  RElement.cpp  RElement.h  RShader.h  RSlider.cpp  RSlider.h  RTypes.h  Radio.cpp  Radio.h  Rui.cpp  Rui.h  Slider.cpp  Slider.h  Storage.cpp  Storage.h  Toggle.cpp  Toggle.h  Types.h
addons/Buttons/include/buttons/: #Untitled-1#  Button.h  Buttons.h  Client.h  Color.h  Element.h  Pad.h  Panel.h  Radio.h  Rectangle.h  Server.h  Slider.h  SliderRange.h  Spline.h  Storage.h  Toggle.h  Types.h  Vector.h
addons/Buttons/src/buttons/: Button.cpp  Buttons.cpp  Client.cpp  Element.cpp  Panel.cpp  Radio.cpp  Server.cpp  Slider.cpp  Spline.cpp  Storage.cpp  Toggle.cpp
addons/Curl/: CMakeLists.txt  Curl.cpp  Curl.h  FTP.cpp  FTP.h  Request.cpp  Request.h
addons/Curl/docs/: compile_curl.sh
addons/Curl/include/curl/: Form.h  Kurl.h
addons/Curl/include/kurl/: Kurl.h
addons/Curl/oauth/: Header.cpp  Header.h  Signature.cpp  Signature.h  Utils.cpp  Utils.h  oAuth.cpp  oAuth.h
addons/Curl/parameter/: Collection.cpp  Collection.h  File.cpp  File.h  Parameter.cpp  Parameter.h
addons/Curl/src/curl/: Kurl.cpp
addons/Curl/src/kurl/: Kurl.cpp
addons/Curl/tests/: CMakeLists.txt  compile.sh  test.html
addons/Curl/tests/curl_download/: CMakeLists.txt  main.cpp
addons/FLV/: CMakeLists.txt  FLV.xcconfig  flv.props  flv_openframeworks_debug.props  flv_openframeworks_release.props
addons/FLV/include/flv/: AV.h  FLV.h  FLVScreenRecorder.h  ScreenRecorder.h
addons/FLV/src/flv/: AV.cpp  FLV.cpp  FLVScreenRecorder.cpp  ScreenRecorder.cpp
addons/Gif/: CMakeLists.txt  Dither.h  Gif.cpp  Gif.h  GifIO.c  GifIO.h  MedianCut.cpp  MedianCut.h
addons/Gif/include/gif/: Dither.h  Gif.h
addons/Gif/src/gif/: Gif.cpp  GifIO.c  GifOpenGL.cpp  GifOpenGL.h  MedianCut.cpp
addons/Icecast/: CMakeLists.txt
addons/Icecast/include/icecast/: ShoutClient.h
addons/Icecast/src/icecast/: ShoutClient.cpp
addons/Ogg/: CMakeLists.txt
addons/Ogg/include/ogg/: CaptureBuffer.h  Ogg.h  OggMaker.h  Types.h  VorbisWriter.h
addons/Ogg/src/ogg/: CaptureBuffer.cpp  OggMaker.cpp  VorbisWriter.cpp
addons/Pango/: CMakeLists.txt  README.txt
addons/Pango/include/pango/: TextGLSurface.h  TextSurface.h
addons/Pango/libs/: .README.txt.swp
addons/Pango/src/: ruFont.cpp  ruFont.h  ruPango.cpp  ruPango.h
addons/Pango/src/pango/: TextGLSurface.cpp  TextSurface.cpp
addons/Twitter/: CMakeLists.txt  IEventListener.h  IStreamEventListener.h  README.md  Stream.cpp  Stream.h  Tweet.cpp  Tweet.h  TweetConstants.h  TweetEvents.h  TweetURL.cpp  TweetURL.h  TwitPic.cpp  TwitPic.h  Twitter.cpp  Twitter.h  Twitter.xcconfig  TwitterStream.cpp  TwitterStream.h  TwitteroAuth.cpp  TwitteroAuth.h  TwitteroAuthHeader.cpp  TwitteroAuthHeader.h  TwitteroAuthSignature.cpp  TwitteroAuthSignature.h
addons/Twitter/_legacy/: TwitPic.cpp
addons/Twitter/curl/: Curl.cpp  Curl.h  Request.cpp  Request.h
addons/Twitter/data/: Tweet.cpp  Tweet.h  URL.cpp  URL.h
addons/Twitter/docs/: README.sh  compile.sh  compile_libuv_32.sh  compile_ssl_64.sh  readme.org
addons/Twitter/include/twitter/: Buffer.h  HTTP.h  OAuth.h  PercentEncode.h  SSLBuffer.h  Tweet.h  Twitter.h  TwitterTypes.h  Types.h
addons/Twitter/oauth/: Header.cpp  Header.h  Signature.cpp  Signature.h  Utils.cpp  Utils.h  oAuth.cpp  oAuth.h
addons/Twitter/parameter/: Collection.cpp  Collection.h  File.cpp  File.h  Parameter.cpp  Parameter.h
addons/Twitter/parser/: JSON.cpp  JSON.h
addons/Twitter/src/twitter/: Buffer.cpp  HTTP.cpp  OAuth.cpp  PercentEncode.cpp  SSLBuffer.cpp  Tweet.cpp  Twitter.cpp  TwitterTypes.cpp
addons/Twitter/tests/: .gitignore  CMakeLists.txt  info.org
addons/Twitter/tests/https/: CMakeLists.txt  main.cpp
addons/Twitter/tests/libuv_openssl1/: CMakeLists.txt  main.cpp
addons/Twitter/tests/libuv_openssl2/: CMakeLists.txt  main.cpp
addons/Twitter/tests/libuv_openssl3_cpp/: CMakeLists.txt  main.cpp
addons/Twitter/types/: General.h  Tweet.cpp  Tweet.h  TwitterCurlValueType.h  TwitterCurlValueTypeFile.cpp  TwitterCurlValueTypeFile.h  TwitterCurlValueTypeString.cpp  TwitterCurlValueTypeString.h  TwitterCurlValues.cpp  TwitterCurlValues.h  TwitterRequest.cpp  TwitterRequest.h  URL.cpp  URL.h
addons/VideoCapture/: CMakeLists.txt  README.md
addons/VideoRecorder/: CMakeLists.txt
addons/VideoRecorder/docs/: README_STREAMING.org  compile.sh  compile_libav_x264.sh  compile_linux_libav_x264.sh  compile_linux_libyuv.sh
addons/VideoRecorder/include/: x264_config.h
apps/examples/flv_recorder/: .gitignore  CMakeLists.txt  README.md  run.sh
apps/examples/pango/: CMakeLists.txt  cleanup_build_dir.sh  compile.bat  compile.sh  setvars.bat
apps/examples/sqlite/: CMakeLists.txt  compile.bat
apps/examples/twitter_get_tokens/: CMakeLists.txt  compile.sh  run.sh
apps/examples/twitter_streaming_example/: .gitignore  CMakeLists.txt
apps/examples/videorecorder_create_h264/: CMakeLists.txt  readme.txt
apps/roxlu/001_twitter_serious_request/: .gitignore  CMakeLists.txt  readme.org
apps/simulations/empty/: CMakeLists.txt  cleanup_build_dir.sh
lib/: CMakeLists.txt  roxlu.props  roxlu.xcconfig  roxlu_openframeworks.props  roxlu_openframeworks_debug.props  roxlu_openframeworks_release.props  roxlu_settings.props
lib/include/roxlu/: Roxlu.h
lib/include/roxlu/3d/: 3d.h  (+9 more)
tests/glfw/empty/: CMakeLists.txt
tests/instagram/: .gitignore  CMakeLists.txt  compile.sh  run.sh
tests/instagram/src/: main.cpp
tests/multitouch/: CMakeLists.txt  README.txt
tests/multitouch/src/: Trackpad.mm  main.mm
tests/portaudio/: CMakeLists.txt  run.sh
tests/portaudio/src/: main.c
(+2396 files in other folders)
